welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:22: error: value Yellow is not a member of object java.awt.Color
	for (h<- 0 to 3 ) {faireV(Color.Yellow)}
                                        ^MethodsPicture:24: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:26: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:28: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:30: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:32: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:34: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:36: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^MethodsPicture:38: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	for (h<- 0 to 3 ) {faireV()}
                                 ^